LinguagemParser.py
# Generated from Linguagem.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing import TextIO


class LinguagemParser ( Parser ):

    grammarFileName = "Linguagem.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "'function'", "'return'", 
                     "'let'", "'const'", "'var'", "'if'", "'else'", "'switch'", 
                     "'case'", "'default'", "'for'", "'while'", "'do'", 
                     "'break'", "'continue'", "'new'", "'in'", "'instanceof'", 
                     "'typeof'", "'delete'", "'null'", "'true'", "'false'", 
                     "'undefined'", "';'", "','", "'('", "')'", "'{'", "'}'", 
                     "'['", "']'", "'.'", "':'", "'?'", "'=>'", "'?.'", 
                     "'+'", "'-'", "'*'", "'/'", "'%'", "'**'", "'++'", 
                     "'--'", "'!'", "'<'", "'>'", "'<='", "'>='", "'=='", 
                     "'!='", "'==='", "'!=='", "'&&'", "'||'", "'~'", "'^'", 
                     "'|'", "'&'", "'<<'", "'>>'", "'='", "'+='", "'-='", 
                     "'*='", "'/='", "'%='", "'**='" ]

    symbolicNames = [ "<INVALID>", "Literal", "StringLiteral", "NumericLiteral", 
                      "BooleanLiteral", "BigIntLiteral", "FUNCTION", "RETURN", 
                      "LET", "CONST", "VAR", "IF", "ELSE", "SWITCH", "CASE", 
                      "DEFAULT", "FOR", "WHILE", "DO", "BREAK", "CONTINUE", 
                      "NEW", "IN", "INSTANCEOF", "TYPEOF", "DELETE", "NULL", 
                      "TRUE", "FALSE", "UNDEFINED", "SEMI", "COMMA", "LPAREN", 
                      "RPAREN", "LBRACE", "RBRACE", "LBRACK", "RBRACK", 
                      "DOT", "COLON", "QUESTION", "ARROW", "OPTIONAL_CHAIN", 
                      "PLUS", "MINUS", "STAR", "SLASH", "PERCENT", "POWER", 
                      "INC", "DEC", "BANG", "LT", "GT", "LE", "GE", "EQ", 
                      "NE", "SEQ", "SNE", "AND", "OR", "TILDE", "CARET", 
                      "B_OR", "B_AND", "LSHIFT", "RSHIFT", "ASSIGN", "PLUSEQ", 
                      "MINUSEQ", "STAREQ", "SLASHEQ", "PERCENTEQ", "POWEQ", 
                      "Number", "BigInt", "String", "Identifier", "COMMENT", 
                      "WS" ]

    RULE_program = 0
    RULE_statement = 1
    RULE_block = 2
    RULE_variableDeclaration = 3
    RULE_variableDeclarator = 4
    RULE_functionDeclaration = 5
    RULE_paramList = 6
    RULE_returnStatement = 7
    RULE_ifStatement = 8
    RULE_switchStatement = 9
    RULE_switchCase = 10
    RULE_defaultCase = 11
    RULE_forStatement = 12
    RULE_forInit = 13
    RULE_whileStatement = 14
    RULE_doWhileStatement = 15
    RULE_breakStatement = 16
    RULE_continueStatement = 17
    RULE_expression = 18
    RULE_assignmentExpression = 19
    RULE_assignmentOperator = 20
    RULE_conditionalExpression = 21
    RULE_logicalOrExpression = 22
    RULE_logicalAndExpression = 23
    RULE_bitwiseOrExpression = 24
    RULE_bitwiseXorExpression = 25
    RULE_bitwiseAndExpression = 26
    RULE_equalityExpression = 27
    RULE_relationalExpression = 28
    RULE_shiftExpression = 29
    RULE_additiveExpression = 30
    RULE_multiplicativeExpression = 31
    RULE_exponentExpression = 32
    RULE_unaryExpression = 33
    RULE_postfixExpression = 34
    RULE_postfixOp = 35
    RULE_primaryExpression = 36
    RULE_functionExpression = 37
    RULE_arrowFunction = 38
    RULE_objectLiteral = 39
    RULE_property = 40
    RULE_arrayLiteral = 41
    RULE_argList = 42

    ruleNames =  [ "program", "statement", "block", "variableDeclaration", 
                   "variableDeclarator", "functionDeclaration", "paramList", 
                   "returnStatement", "ifStatement", "switchStatement", 
                   "switchCase", "defaultCase", "forStatement", "forInit", 
                   "whileStatement", "doWhileStatement", "breakStatement", 
                   "continueStatement", "expression", "assignmentExpression", 
                   "assignmentOperator", "conditionalExpression", "logicalOrExpression", 
                   "logicalAndExpression", "bitwiseOrExpression", "bitwiseXorExpression", 
                   "bitwiseAndExpression", "equalityExpression", "relationalExpression", 
                   "shiftExpression", "additiveExpression", "multiplicativeExpression", 
                   "exponentExpression", "unaryExpression", "postfixExpression", 
                   "postfixOp", "primaryExpression", "functionExpression", 
                   "arrowFunction", "objectLiteral", "property", "arrayLiteral", 
                   "argList" ]

    EOF = Token.EOF
    Literal=1
    StringLiteral=2
    NumericLiteral=3
    BooleanLiteral=4
    BigIntLiteral=5
    FUNCTION=6
    RETURN=7
    LET=8
    CONST=9
    VAR=10
    IF=11
    ELSE=12
    SWITCH=13
    CASE=14
    DEFAULT=15
    FOR=16
    WHILE=17
    DO=18
    BREAK=19
    CONTINUE=20
    NEW=21
    IN=22
    INSTANCEOF=23
    TYPEOF=24
    DELETE=25
    NULL=26
    TRUE=27
    FALSE=28
    UNDEFINED=29
    SEMI=30
    COMMA=31
    LPAREN=32
    RPAREN=33
    LBRACE=34
    RBRACE=35
    LBRACK=36
    RBRACK=37
    DOT=38
    COLON=39
    QUESTION=40
    ARROW=41
    OPTIONAL_CHAIN=42
    PLUS=43
    MINUS=44
    STAR=45
    SLASH=46
    PERCENT=47
    POWER=48
    INC=49
    DEC=50
    BANG=51
    LT=52
    GT=53
    LE=54
    GE=55
    EQ=56
    NE=57
    SEQ=58
    SNE=59
    AND=60
    OR=61
    TILDE=62
    CARET=63
    B_OR=64
    B_AND=65
    LSHIFT=66
    RSHIFT=67
    ASSIGN=68
    PLUSEQ=69
    MINUSEQ=70
    STAREQ=71
    SLASHEQ=72
    PERCENTEQ=73
    POWEQ=74
    Number=75
    BigInt=76
    String=77
    Identifier=78
    COMMENT=79
    WS=80

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(LinguagemParser.EOF, 0)

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LinguagemParser.StatementContext)
            else:
                return self.getTypedRuleContext(LinguagemParser.StatementContext,i)


        def getRuleIndex(self):
            return LinguagemParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)




    def program(self):

        localctx = LinguagemParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 89
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 4615653147702931426) != 0) or _la==78:
                self.state = 86
                self.statement()
                self.state = 91
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 92
            self.match(LinguagemParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def block(self):
            return self.getTypedRuleContext(LinguagemParser.BlockContext,0)


        def variableDeclaration(self):
            return self.getTypedRuleContext(LinguagemParser.VariableDeclarationContext,0)


        def SEMI(self):
            return self.getToken(LinguagemParser.SEMI, 0)

        def returnStatement(self):
            return self.getTypedRuleContext(LinguagemParser.ReturnStatementContext,0)


        def functionDeclaration(self):
            return self.getTypedRuleContext(LinguagemParser.FunctionDeclarationContext,0)


        def breakStatement(self):
            return self.getTypedRuleContext(LinguagemParser.BreakStatementContext,0)


        def continueStatement(self):
            return self.getTypedRuleContext(LinguagemParser.ContinueStatementContext,0)


        def expression(self):
            return self.getTypedRuleContext(LinguagemParser.ExpressionContext,0)


        def ifStatement(self):
            return self.getTypedRuleContext(LinguagemParser.IfStatementContext,0)


        def switchStatement(self):
            return self.getTypedRuleContext(LinguagemParser.SwitchStatementContext,0)


        def forStatement(self):
            return self.getTypedRuleContext(LinguagemParser.ForStatementContext,0)


        def whileStatement(self):
            return self.getTypedRuleContext(LinguagemParser.WhileStatementContext,0)


        def doWhileStatement(self):
            return self.getTypedRuleContext(LinguagemParser.DoWhileStatementContext,0)


        def getRuleIndex(self):
            return LinguagemParser.RULE_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatement" ):
                listener.enterStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatement" ):
                listener.exitStatement(self)




    def statement(self):

        localctx = LinguagemParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_statement)
        try:
            self.state = 113
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 94
                self.block()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 95
                self.variableDeclaration()
                self.state = 96
                self.match(LinguagemParser.SEMI)
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 98
                self.returnStatement()
                self.state = 99
                self.match(LinguagemParser.SEMI)
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 101
                self.functionDeclaration()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 102
                self.breakStatement()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 103
                self.continueStatement()
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 104
                self.expression()
                self.state = 105
                self.match(LinguagemParser.SEMI)
                pass

            elif la_ == 8:
                self.enterOuterAlt(localctx, 8)
                self.state = 107
                self.ifStatement()
                pass

            elif la_ == 9:
                self.enterOuterAlt(localctx, 9)
                self.state = 108
                self.switchStatement()
                pass

            elif la_ == 10:
                self.enterOuterAlt(localctx, 10)
                self.state = 109
                self.forStatement()
                pass

            elif la_ == 11:
                self.enterOuterAlt(localctx, 11)
                self.state = 110
                self.whileStatement()
                pass

            elif la_ == 12:
                self.enterOuterAlt(localctx, 12)
                self.state = 111
                self.doWhileStatement()
                pass

            elif la_ == 13:
                self.enterOuterAlt(localctx, 13)
                self.state = 112
                self.match(LinguagemParser.SEMI)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BlockContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LBRACE(self):
            return self.getToken(LinguagemParser.LBRACE, 0)

        def RBRACE(self):
            return self.getToken(LinguagemParser.RBRACE, 0)

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LinguagemParser.StatementContext)
            else:
                return self.getTypedRuleContext(LinguagemParser.StatementContext,i)


        def getRuleIndex(self):
            return LinguagemParser.RULE_block

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBlock" ):
                listener.enterBlock(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBlock" ):
                listener.exitBlock(self)




    def block(self):

        localctx = LinguagemParser.BlockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_block)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 115
            self.match(LinguagemParser.LBRACE)
            self.state = 119
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 4615653147702931426) != 0) or _la==78:
                self.state = 116
                self.statement()
                self.state = 121
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 122
            self.match(LinguagemParser.RBRACE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VariableDeclarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def variableDeclarator(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LinguagemParser.VariableDeclaratorContext)
            else:
                return self.getTypedRuleContext(LinguagemParser.VariableDeclaratorContext,i)


        def LET(self):
            return self.getToken(LinguagemParser.LET, 0)

        def CONST(self):
            return self.getToken(LinguagemParser.CONST, 0)

        def VAR(self):
            return self.getToken(LinguagemParser.VAR, 0)

        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(LinguagemParser.COMMA)
            else:
                return self.getToken(LinguagemParser.COMMA, i)

        def getRuleIndex(self):
            return LinguagemParser.RULE_variableDeclaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVariableDeclaration" ):
                listener.enterVariableDeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVariableDeclaration" ):
                listener.exitVariableDeclaration(self)




    def variableDeclaration(self):

        localctx = LinguagemParser.VariableDeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_variableDeclaration)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 124
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 1792) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
            self.state = 125
            self.variableDeclarator()
            self.state = 130
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==31:
                self.state = 126
                self.match(LinguagemParser.COMMA)
                self.state = 127
                self.variableDeclarator()
                self.state = 132
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VariableDeclaratorContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Identifier(self):
            return self.getToken(LinguagemParser.Identifier, 0)

        def ASSIGN(self):
            return self.getToken(LinguagemParser.ASSIGN, 0)

        def expression(self):
            return self.getTypedRuleContext(LinguagemParser.ExpressionContext,0)


        def getRuleIndex(self):
            return LinguagemParser.RULE_variableDeclarator

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVariableDeclarator" ):
                listener.enterVariableDeclarator(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVariableDeclarator" ):
                listener.exitVariableDeclarator(self)




    def variableDeclarator(self):

        localctx = LinguagemParser.VariableDeclaratorContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_variableDeclarator)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 133
            self.match(LinguagemParser.Identifier)
            self.state = 136
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==68:
                self.state = 134
                self.match(LinguagemParser.ASSIGN)
                self.state = 135
                self.expression()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FunctionDeclarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FUNCTION(self):
            return self.getToken(LinguagemParser.FUNCTION, 0)

        def Identifier(self):
            return self.getToken(LinguagemParser.Identifier, 0)

        def LPAREN(self):
            return self.getToken(LinguagemParser.LPAREN, 0)

        def RPAREN(self):
            return self.getToken(LinguagemParser.RPAREN, 0)

        def block(self):
            return self.getTypedRuleContext(LinguagemParser.BlockContext,0)


        def paramList(self):
            return self.getTypedRuleContext(LinguagemParser.ParamListContext,0)


        def getRuleIndex(self):
            return LinguagemParser.RULE_functionDeclaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunctionDeclaration" ):
                listener.enterFunctionDeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunctionDeclaration" ):
                listener.exitFunctionDeclaration(self)




    def functionDeclaration(self):

        localctx = LinguagemParser.FunctionDeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_functionDeclaration)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 138
            self.match(LinguagemParser.FUNCTION)
            self.state = 139
            self.match(LinguagemParser.Identifier)
            self.state = 140
            self.match(LinguagemParser.LPAREN)
            self.state = 142
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==78:
                self.state = 141
                self.paramList()


            self.state = 144
            self.match(LinguagemParser.RPAREN)
            self.state = 145
            self.block()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParamListContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Identifier(self, i:int=None):
            if i is None:
                return self.getTokens(LinguagemParser.Identifier)
            else:
                return self.getToken(LinguagemParser.Identifier, i)

        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(LinguagemParser.COMMA)
            else:
                return self.getToken(LinguagemParser.COMMA, i)

        def getRuleIndex(self):
            return LinguagemParser.RULE_paramList

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParamList" ):
                listener.enterParamList(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParamList" ):
                listener.exitParamList(self)




    def paramList(self):

        localctx = LinguagemParser.ParamListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_paramList)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 147
            self.match(LinguagemParser.Identifier)
            self.state = 152
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==31:
                self.state = 148
                self.match(LinguagemParser.COMMA)
                self.state = 149
                self.match(LinguagemParser.Identifier)
                self.state = 154
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ReturnStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def RETURN(self):
            return self.getToken(LinguagemParser.RETURN, 0)

        def expression(self):
            return self.getTypedRuleContext(LinguagemParser.ExpressionContext,0)


        def getRuleIndex(self):
            return LinguagemParser.RULE_returnStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterReturnStatement" ):
                listener.enterReturnStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitReturnStatement" ):
                listener.exitReturnStatement(self)




    def returnStatement(self):

        localctx = LinguagemParser.ReturnStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_returnStatement)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 155
            self.match(LinguagemParser.RETURN)
            self.state = 157
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & 4615653146627145826) != 0) or _la==78:
                self.state = 156
                self.expression()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IfStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IF(self):
            return self.getToken(LinguagemParser.IF, 0)

        def LPAREN(self):
            return self.getToken(LinguagemParser.LPAREN, 0)

        def expression(self):
            return self.getTypedRuleContext(LinguagemParser.ExpressionContext,0)


        def RPAREN(self):
            return self.getToken(LinguagemParser.RPAREN, 0)

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LinguagemParser.StatementContext)
            else:
                return self.getTypedRuleContext(LinguagemParser.StatementContext,i)


        def ELSE(self):
            return self.getToken(LinguagemParser.ELSE, 0)

        def getRuleIndex(self):
            return LinguagemParser.RULE_ifStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIfStatement" ):
                listener.enterIfStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIfStatement" ):
                listener.exitIfStatement(self)




    def ifStatement(self):

        localctx = LinguagemParser.IfStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_ifStatement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 159
            self.match(LinguagemParser.IF)
            self.state = 160
            self.match(LinguagemParser.LPAREN)
            self.state = 161
            self.expression()
            self.state = 162
            self.match(LinguagemParser.RPAREN)
            self.state = 163
            self.statement()
            self.state = 166
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,8,self._ctx)
            if la_ == 1:
                self.state = 164
                self.match(LinguagemParser.ELSE)
                self.state = 165
                self.statement()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SwitchStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def SWITCH(self):
            return self.getToken(LinguagemParser.SWITCH, 0)

        def LPAREN(self):
            return self.getToken(LinguagemParser.LPAREN, 0)

        def expression(self):
            return self.getTypedRuleContext(LinguagemParser.ExpressionContext,0)


        def RPAREN(self):
            return self.getToken(LinguagemParser.RPAREN, 0)

        def LBRACE(self):
            return self.getToken(LinguagemParser.LBRACE, 0)

        def RBRACE(self):
            return self.getToken(LinguagemParser.RBRACE, 0)

        def switchCase(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LinguagemParser.SwitchCaseContext)
            else:
                return self.getTypedRuleContext(LinguagemParser.SwitchCaseContext,i)


        def defaultCase(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LinguagemParser.DefaultCaseContext)
            else:
                return self.getTypedRuleContext(LinguagemParser.DefaultCaseContext,i)


        def getRuleIndex(self):
            return LinguagemParser.RULE_switchStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSwitchStatement" ):
                listener.enterSwitchStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSwitchStatement" ):
                listener.exitSwitchStatement(self)




    def switchStatement(self):
